--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   },
   "dependencies": {
     "lodash.isequal": "^4.5.0",
-    "prop-types": "^15.6.1"
+    "prop-types": "^15.6.1",
+    "tweenkle": "^0.1.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -79,8 +80,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-watch": "^4.3.1",
-    "sinon": "^5.0.7",
-    "tweenkle": "^0.1.6"
+    "sinon": "^5.0.7"
   },
   "jest": {
     "collectCoverage": true,
