--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
     "coveralls": "^3.0.1",
@@ -65,22 +65,22 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "greenkeeper-lockfile": "^1.15.0",
     "gzip-size": "^5.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.8.0",
     "jest-enzyme": "^7.0.2",
-    "jsdom": "^12.0.0",
+    "jsdom": "^15.1.1",
     "pretty-bytes": "^5.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
-    "regenerator-runtime": "^0.12.0",
-    "rollup": "^0.66.1",
+    "regenerator-runtime": "^0.13.2",
+    "rollup": "^1.15.1",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.0.1",
     "rollup-plugin-uglify": "^6.0.0",
     "rollup-watch": "^4.3.1",
-    "sinon": "^6.3.4"
+    "sinon": "^7.3.2"
   },
   "jest": {
     "collectCoverage": true,
@@ -91,7 +91,9 @@
     "setupFiles": [
       "<rootDir>/tools/jest-setup.js"
     ],
-    "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
+    "setupFilesAfterEnv": [
+      "./node_modules/jest-enzyme/lib/index.js"
+    ],
     "testURL": "http://localhost"
   }
 }
